<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_5"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        card_view:cardBackgroundColor="@color/light_brown"
        card_view:cardCornerRadius="@dimen/corner_radius">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.4"
            android:src="@drawable/frappe" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/FrappeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_5"
                android:fontFamily="casual"
                android:text="@string/frappe"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_24" />

            <TextView
                android:id="@+id/Toppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/FrappeHeader"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/extras"
                android:textAllCaps="true"
                android:textColor="@color/brown"
                android:textSize="@dimen/text_size_16" />

            <CheckBox
                android:id="@+id/HotCoffeeFrappe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Toppings"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/margin_24"
                android:text="@string/hot_coffee"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <CheckBox
                android:id="@+id/BrewedFrappe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/HotCoffeeFrappe"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_16"
                android:paddingLeft="@dimen/margin_24"
                android:text="@string/brewed"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/NoteFrappe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/BrewedFrappe"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/margin_10"
                android:text="@string/note_frappe" />

            <TextView
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/NoteFrappe"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textColor="@color/brown"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Quantity"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decButtonViewFrappe"
                    android:layout_width="@dimen/dimen_48"
                    android:layout_height="@dimen/dimen_48"
                    android:layout_marginRight="@dimen/margin_8"
                    android:onClick="decrement"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/quantity_text_view_frappe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />

                <Button
                    android:id="@+id/IncButtonViewFrappe"
                    android:layout_width="@dimen/dimen_48"
                    android:layout_height="@dimen/dimen_48"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:onClick="increment"
                    android:text="@string/plus" />

            </LinearLayout>
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>