<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coffee_house"
        android:layout_above="@id/WelcomeUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_16"
        android:paddingTop="@dimen/margin_16"/>

    <TextView
        android:id="@+id/WelcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_guest"
        android:layout_above="@id/Info"
        android:textSize="@dimen/text_size_26"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/white"
        android:layout_above="@id/NameField"
        android:textSize="@dimen/text_size_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"/>

    <EditText
        android:id="@+id/NameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/brown_200"
        android:hint="@string/name"
        android:paddingLeft="@dimen/margin_10"
        android:inputType="text|textCapWords" />

    <EditText
        android:id="@+id/PhoneNo"
        android:layout_below="@id/NameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/brown_200"
        android:inputType="phone"
        android:paddingLeft="@dimen/margin_10"
        android:hint="@string/mobile_number"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/premium_coffee"
        android:layout_below="@id/PhoneNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:alpha="0.7"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_16"
        android:onClick="UserActivity"
        android:text="@string/imin"
        android:textColor="@color/white"
        android:background="@android:color/transparent"/>

</RelativeLayout>
