<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@string/image_view_desc"
        android:scaleType="fitXY"
        android:src="@drawable/main_bg" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/FooterView"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/Cappuccino"
                layout="@layout/cappuccino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/CaffeMocha"
                layout="@layout/caffe_mocha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/Frappe"
                layout="@layout/frappe_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/espresso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </ScrollView>


    <View
        android:id="@+id/FooterView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/Footer"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_5">

        <Button
            android:id="@+id/ViewSummaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_16"
            android:onClick="viewSummary"
            android:text="@string/summary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_16"
            android:onClick="mailOrder"
            android:text="@string/confirm_order" />

    </RelativeLayout>
</RelativeLayout>